# lesecret

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/lesecret/: main.py
tests/: test_lesecret.py
